<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGreen"
    tools:context=".FailureActivity">

    <TextView
        android:id="@+id/gameOverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameOvertxt"
        android:textColor="@color/white"
        android:textColorLink="#EC5E5E"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/CurrentScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <Button
        android:id="@+id/TryAginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/green3"
        android:text="@string/PlayAgain"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ToMainMenu"
        android:layout_width="288dp"
        android:layout_height="58dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/green3"
        android:text="@string/Home"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/CurrentScore"
        android:layout_width="218dp"
        android:layout_height="80dp"
        android:layout_marginBottom="72dp"
        android:text="@string/score"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/TryAginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>